--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -66,7 +66,7 @@
 }
 
 @article{brown2020SummaryAbundance2020,
-  title = {2020 {{Summary}} of {{Abundance Data}} for {{Chinook Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Tshawytscha}}) in {{Southern British Columbia}}, {{Canada}}},
+  title = {2020 {{Summary}} of {{Abundance Data}} for {{Chinook Salmon}} (\textit{{Oncorhynchus} tshawytscha}) in {{Southern British Columbia}}, {{Canada}} {\url{https://science-catalogue.canada.ca/record=4089004~S6}}},
   author = {Brown, G. S. and Thiess, M. E. and Wor, C. and Holt, C. A. and Patten, B. and Bailey, R. E. and Parken, C. K. and Baillie, S. J. and Candy, J. R. and Willis, D. M. and Hertz, E. and Connors, B. and Pestal, G. P.},
   year = {2020},
   journal = {Canadian Technical Report of Fisheries and Aquatic Sciences},
@@ -138,8 +138,8 @@
 }
 
 @techreport{cosewicCOSEWICAssessmentStatus2020,
-  title = {{{COSEWIC}} Assessment and Status Report on the Chinook Salmon, {{Oncorhynchus}} Tshawytscha, Designatable Units in {{Southern British Columbia}} (Part Two  Designatable Units with High Levels of Artificial Releases in the Last 12 Years), in {{Canada}}.},
-  author = {{COSEWIC}},
+  title = {{{COSEWIC}} Assessment and Status Report on the Chinook Salmon, \textit{{Oncorhynchus} tshawytscha}, Designatable Units in {{Southern British Columbia}} (Part Two  Designatable Units with High Levels of Artificial Releases in the Last 12 Years), in {{Canada}}.},
+  author = {{COSEWIC} and {Environment and Climate Change Canada} and {Committee on the Status of Endangered Wildlife in Canada}},
   year = {2020},
   pages = {xxxv + 203 pp},
   institution = {{Environment and Climate Change Canada}},
@@ -149,7 +149,7 @@
 }
 
 @article{coxCandidateLimitReference2019,
-  title = {Candidate {{Limit Reference Points}} as a {{Basis}} for {{Choosing Among Alternative Harvest Control Rules}} for {{Pacific Herring}} ({{Clupea}} Pallasii) in {{British Columbia}}},
+  title = {Candidate {{Limit Reference Points}} as a {{Basis}} for {{Choosing Among Alternative Harvest Control Rules}} for {{Pacific Herring}} (\textit{{Clupea} pallasii}) in {{British Columbia}}},
   author = {Cox, Sean P and Benson, Ashleen J and Cleary, Jaclyn S and Taylor, Nathan G},
   year = {2019},
   journal = {Canadian Science Advisory Secretariat Research Document},
@@ -220,10 +220,10 @@
   number = {2012/032}
 }
 
-@techreport{dfoCanadaPolicyConservation2005,
+@article{dfoCanadaPolicyConservation2005,
   title = {Canada's {{Policy}} for {{Conservation}} of {{Wild Pacific Salmon}}},
+  author = {{DFO}},
   year = {2005},
-  collaborator = {DFO},
   langid = {english},
   lccn = {SH346 .C35 2005},
   keywords = {Canada,Conservation Government policy,Pacific salmon},
@@ -243,11 +243,12 @@
   file = {C\:\\Users\\holtk\\Zotero\\storage\\5Y2LPZ9X\\Government of Canada - 2009 - A fishery decision-making framework incorporating .pdf;C\:\\Users\\holtk\\Zotero\\storage\\UIYHN55Z\\precaution-eng.html}
 }
 
-@techreport{dfoHarvestStrategyCompliant2006,
+@article{dfoHarvestStrategyCompliant2006,
   title = {A {{Harvest Strategy Compliant}} with the {{Precautionary Approach}}},
   author = {DFO},
   year = {2006},
-  number = {2006/023}
+  journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
+  volume = {2006/023}
 }
 
 @article{dfoIntegratedBiologicalStatus2016,
@@ -415,7 +416,7 @@
 }
 
 @techreport{godboutStockStatusWild2004,
-  title = {Stock {{Status}} of {{Wild Chum Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Keta }}{{{\emph{Walbaum}}}}) {{Returning}} to {{British Columbia}}'s {{Central Coast}} and {{Johnstone}} and {{Georgia Straits}} (Excluding the {{Fraser River}})},
+  title = {Stock {{Status}} of {{Wild Chum Salmon}} (\textit{{Oncorhynchus} keta} {Walbaum}) {{Returning}} to {{British Columbia}}'s {{Central Coast}} and {{Johnstone}} and {{Georgia Straits}} (Excluding the {{Fraser River}})},
   author = {Godbout, L and Irvine, J. R. and Bailey, D. and Van Will, P. and McConnell, C.},
   year = {2004},
   number = {2004/007},
@@ -425,7 +426,7 @@
 }
 
 @article{grant2017FraserSockeye2020,
-  title = {The 2017 {{Fraser Sockeye Salmon}} ({{Oncorhynchus}} Nerka) {{Integrated Biological Status Re-Assessments Under}} the {{Wild Salmon Policy Using Standardized Metrics}} and {{Expert Judgment}}},
+  title = {The 2017 {{Fraser Sockeye Salmon}} (\textit{{Oncorhynchus} nerka}) {{Integrated Biological Status Re-Assessments Under}} the {{Wild Salmon Policy Using Standardized Metrics}} and {{Expert Judgment}}},
   author = {Grant, S C H and Holt, C A and Pestal, G and Davis, B M and MacDonald, B L},
   year = {2020},
   pages = {218},
@@ -434,7 +435,7 @@
 }
 
 @techreport{hilbornBritishColumbiaChum2012,
-  title = {British {{Columbia Chum Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Keta}}) {{Fisheries}}: {{British Columbia Coastal}} and {{Adjacent Canadian Pacific EEZ Waters}}, {{Final Certification Report}}.},
+  title = {British {{Columbia Chum Salmon}} (\textit{{Oncorhynchus} keta}) {{Fisheries}}: {{British Columbia Coastal}} and {{Adjacent Canadian Pacific EEZ Waters}}, {{Final Certification Report}}.},
   author = {Hilborn, Ray and Schmidt, Dana and English, Karl and Devitt, Steve},
   year = {2012},
   number = {82506},
@@ -504,7 +505,7 @@
 }
 
 @techreport{ifcrtConservationStrategyCoho2006,
-  title = {Conservation Strategy for {{Coho Salmon}}  ({{Oncorhynchus}} Kisutch), Interior {{Fraser River}} Populations},
+  title = {Conservation Strategy for {{Coho Salmon}}  (\textit{{Oncorhynchus} kisutch}), Interior {{Fraser River}} Populations},
   author = {{IFCRT}},
   year = {2006},
   pages = {132},
