--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -58,21 +58,17 @@ We propose that proportional LRPs are more appropriate for Pacific salmon SMUs i
 
 We implement proportional LRP’s using approaches developed to assess CU status under DFO's WSP [@dfoCanadaPolicyConservation2005; @holtIndicatorsStatusBenchmarks2009] and implemented for a subset of priority CUs [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @grant2017FraserSockeye2020]. These approaches use multiple metrics to evaluate status including trends in abundance and abundance metrics, and an expert driven integration approach to combine statuses across metrics into a single status for each CU. In our case study applications, we rely on the recently developed Pacific Salmon Status Scanner tool (hereafter referred to as the 'Salmon Scanner'; Pestal et al., in prep^[Pestal, G., MacDonald, B, Grant, S, and Holt, C., in prep. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci.]) as a way to rapidly approximate more detailed WSP status assessments. The Salmon Scanner allows us to rapidly generate up-to-date estimates of integrated CU status for all of our case study applications, and is recommended as an approach for defining LRPs in our companion working paper (Holt et al., in review).
 
-When developing aggregate abundance LRP options, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above Red status. However, estimates of CU status are based on a comparison of spawning abundance to a single lower benchmark for each CU rather than a multidimensional status estimate. Exceptions are described in the application to case studies. A variety of methods are available to estimate lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt et al. (in review). 
+When developing aggregate abundance LRP options, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above their Red status zone. For these LRPs, estimates of CU status are approximated based on a comparison of spawning abundance to a single lower benchmark for each CU. Exceptions are described in the application to case studies. <!--KH: remobing as it seems too repatative.  A variety of methods are available to estimate lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt et al. (in review). -->
 
 <!--Carrie: can you please review the following two paragraphs to make sure you agree with my revisions.  
 
-Also - I have not yet reponded to this comment from Chuck:
+Also - I have not yet responded to this comment from Chuck:
 "what happens with sites where pni cannot be measured because data are not collected or insufficient.  E.g. is sufficient to collect a brood stock sample of 40 fish at the same time and location where the broodstock have been collected for the last 40 years and assume that is a random sample for the population.  ?  we often see different mark rates in the brood stock samples compared to the river spawners.  We also know that the hatchery programs seldom collect a random sample, as many hatchery staff pick big females and avoid collecting jack males."
 -->
 
-We also maintain consistency with the WSP by only including spawning streams without significant enhancement when evaluating CU and SMU status. We use the Proportionate Natural Influence metric, PNI,as a basis for defining 'significant enhancement'. PNI is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. We defined 'significant enhancement' as PNI values < 0.5. Spawning streams with PNI estimated or assumed to be < 0.5 were excluded from case study analyses.
+We also maintain consistency with the WSP by only including spawning streams without significant enhancement when evaluating CU and SMU status. We use the Proportionate Natural Influence metric, PNI,as a basis for defining 'significant enhancement'. PNI is a metric of the genetic risk of hatcheries on natural populations. Values less than 0.5 indicate populations where most fish are hatchery origin [classified as integrated-hatchery populations; @withlerGeneticallyBasedTargets2018]. We defined 'significant enhancement' as PNI values < 0.5 and excluded spawning streams with PNI estimated or assumed to be < 0.5 from case study analyses. Systems with levels of PNI > 0.5 can still have hatchery influences; however, dynamics are predominately natural origin. <!--KH: suggesting removal for simplification: PNI values $\geqslant$ 0.5 and < 0.72 indicate populations where natural-origin fish predominate (integrated-transition populations), and values $\geqslant$ 0.72 indicate populations where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [integrated-wild populations; @dfoCanadaPolicyConservation2005; @withlerGeneticallyBasedTargets2018]. Fully wild populations are those that not have hatchery programs, and for which strays from out-of-basin hatchery production are limited to <3% per year [@withlerGeneticallyBasedTargets2018].--> Where time-series of the proportion of hatchery marked fish on the spawning grounds are available (e.g., Interior Fraser Coho case study), these proportions are used to inform assessments in two ways: first to develop time-series of natural-origin recruitment for benchmark estimation based on stock-recruitment relationships and second to develop time series of natural-origin spawners for status assessment against benchmarks.  When reliable time-series of the proportion of hatchery influence are not available (WCVI Chinook), total spawners are used for LRP analyses provided that the threshold of assumed PNI > 0.5 has been met.     
 
-
-Systems with levels of PNI > 0.5 can have hatchery influences; however, dynamics are predominately natural origin. PNI values $\geqslant$ 0.5 and < 0.72 indicate integrated-transition populations where natural-origin fish predominate, and values $\geqslant$ 0.72 indicate integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@dfoCanadaPolicyConservation2005; @withlerGeneticallyBasedTargets2018]. Fully wild populations are those that not have hatchery programs, and for which strays from out-of-basin hatchery production are limited to <3% per year [@withlerGeneticallyBasedTargets2018]. Where time-series of the proportion of hatchery marked fish on the spawning grounds are available (e.g., Interior Fraser Coho case study), these proportions are used to inform assessments in two ways: first to develop time-series of natural-origin recruitment for benchmark estimation based on stock-recruitment relationships and second to develop time series of natural-origin spawners for status assessment against benchmarks.  
-
-
-More detailed descriptions of each of the LRP estimation methods are provided in the following sections, while guidance on when and how proportional and aggregate abundance LRPs should be applied is provided in Holt et al. (in review). We recommend that users consult Holt et al. (in review) before applying any of the methods described in this case study paper.
+More detailed descriptions of LRP estimation methods are provided in the following sections, while guidance on when and how proportional and aggregate abundance LRPs should be applied is provided in Holt et al. (in review). We recommend that users consult Holt et al. (in review) before applying any of the methods described in this case study paper.
 
 
 
